# electron-cppgraphql

./: .gitignore  CMakeLists.txt  NodeBinding.cpp  README.md  Today.cpp  Today.h  package-lock.json  package.json  schema.today.graphql  test.js
.github/workflows/: windows.yml
__snapshots__/: test.js.snap
lib/: index.js  preload.js
schema/: CMakeLists.txt
